Fixed everything but address horizontal/vertical alignment

--- a/RockWeb/CSS/developer.less
+++ b/RockWeb/CSS/developer.less
@@ -262,14 +262,6 @@ div.aspNetDisabled {
 }
 
 /* DS - CSS for credit card stripe */
-
-ul.card-logos 
-{
-	display: inline-block;
-	margin: 0;
-	padding: 0;
- }
-
 .card-visa, .card-mastercard, .card-amex, .card-discover, .card-diners, .card-jcb 
 {
 	display: inline-block;
@@ -317,45 +309,21 @@ ul.card-logos
 }
 
 /* DS - CSS for finance styling */
-
-.payment-details 
-{
-	overflow: visible;
-}
-
 .align-right 
 {
 	margin-top: 5px;
-    margin-left: 180px;       
+    margin-left: 25%;       
 }
 
-.align-middle 
+.address-line
 {
-    margin-top: 20px;
-}
-
-.form-horizontal .control-group .input-prepend
-{
-	margin-bottom: 10px;
-	display: block;
-}
-
-.state-select
-{
-	position: absolute;
-    margin-left: -180px;
-}
-
-.credit-label 
-{
-    margin-bottom: 0px;
+    display: inline-block;
 }
 
 .check-image 
 {
 	margin-top: 10px;	
 }
-
 
 /*CSF - right align the "Clear Exceptions" link on the Exceptions List Page*/
 .clearExceptionsLink
